--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "listprocs-win"
 version = "0.1.0"
-description = "A Tauri App"
+description = "A Tauri App1"
 authors = ["you"]
 edition = "2021"
 
@@ -22,4 +22,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sysinfo = "0.35.2"
+wgpu = "25.0.2"
 
